# accesslayer-contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  test_issues_487_489_491_492.rs
.github/: PULL_REQUEST_TEMPLATE.md
creator-keys/src/: events.rs  lib.rs  test.rs  test_issues.rs
creator-keys/test_snapshots/: buy_at_max_supply_is_rejected_with_overflow_and_no_state_corruption.1.json  holder_count_tracks_distinct_buyers_and_decrements_on_exit.1.json  sell_fee_split_invariant_100_creator_zero_protocol.1.json  sell_fee_split_invariant_50_50_equal_split.1.json  sell_fee_split_invariant_90_10_nominal_case.1.json  sell_fee_split_invariant_across_multiple_fee_configs.1.json  sell_fee_split_invariant_across_price_range.1.json  sell_fee_split_invariant_boundary_odd_price_999.1.json  sell_fee_split_invariant_boundary_price_one.1.json  sell_fee_split_invariant_boundary_price_two.1.json  sell_fee_split_invariant_deterministic_assertions.1.json  sell_fee_split_invariant_large_amount.1.json  sell_fee_split_invariant_max_protocol_50_percent.1.json  (+243 more)
docs/: FEE_RECIPIENT_UPDATE.md  STORAGE_EXTENSION_PATTERN.md  VERSIONING.md  authorization-model.md  bonding-curve-formula.md  contract-consumer-boundaries.md  contract-event-conventions.md  contract-function-contribution-guide.md  creator-state-storage-ttl.md  curve-preset-immutability.md  emergency-pause-runbook.md  error-codes.md  event-stability-guarantees.md  local-soroban-prerequisites.md  minimum-viable-test-structure.md  read-only-methods.md  storage-key-invariants.md  transfer-supply-cap-and-dividend-interaction.md
(+120 files in other folders)
