[workspace]
members = ["creator-keys"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
soroban-sdk = "22.0.11"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Suppress PDB generation on Windows to prevent linker exhaustion (LNK1318)
# under disk-constrained environments. Setting debug = 0 disables the Program
# Database file that the MSVC linker writes alongside the test binary.
# [profile.test] inherits from [profile.dev], so setting debug = 0 here
# covers both `cargo build` and `cargo test` invocations.
[profile.dev]
debug = 0

